--- a/view/frontend/templates/checkout/item/default.phtml
+++ b/view/frontend/templates/checkout/item/default.phtml
@@ -6,23 +6,18 @@
 
 // phpcs:disable Magento2.Files.LineLength
 ?>
-<?php
-/** @var \Magento\Checkout\Block\Cart\Item\Renderer\ $block */
-/** @var \Magento\Framework\Escaper $escaper */
-?>
-
-<strong class="product name product-item-name"><a href="<?= $escaper->escapeUrl($block->getProductUrl()) ?>"><?= $escaper->escapeHtml($block->getProductName()) ?></a></strong>
+<strong class="product name product-item-name"><a href="<?= $block->escapeUrl($block->getProductUrl()) ?>"><?= $block->escapeHtml($block->getProductName()) ?></a></strong>
 <?php if ($_options = $block->getOptionList()) : ?>
     <dl class="item-options">
         <?php foreach ($_options as $_option) : ?>
             <?php $_formatedOptionValue = $block->getFormatedOptionValue($_option) ?>
-            <dt><?= $escaper->escapeHtml($_option['label']) ?></dt>
+            <dt><?= $block->escapeHtml($_option['label']) ?></dt>
             <dd<?= (isset($_formatedOptionValue['full_view']) ? ' class="tooltip wrapper"' : '') ?>>
-                <?= $escaper->escapeHtml($_formatedOptionValue['value'], ['span', 'a']) ?>
+                <?= $block->escapeHtml($_formatedOptionValue['value'], ['span']) ?>
                 <?php if (isset($_formatedOptionValue['full_view'])) : ?>
                     <dl class="item options tooltip content">
-                        <dt><?= $escaper->escapeHtml($_option['label']) ?></dt>
-                        <dd><?= $escaper->escapeHtml($_formatedOptionValue['full_view'], ['span']) ?></dd>
+                        <dt><?= $block->escapeHtml($_option['label']) ?></dt>
+                        <dd><?= $block->escapeHtml($_formatedOptionValue['full_view'], ['span']) ?></dd>
                     </dl>
                 <?php endif; ?>
             </dd>
