--- a/view/frontend/templates/checkout/billing.phtml
+++ b/view/frontend/templates/checkout/billing.phtml
@@ -8,24 +8,20 @@
  * Multishipping checkout billing information
  *
  * @var $block \Magento\Multishipping\Block\Checkout\Billing
- * @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer
  */
 ?>
 <div id="checkout-loader" data-role="checkout-loader" class="loading-mask" data-mage-init='{"billingLoader": {}}'>
     <div class="loader">
         <img src="<?= $block->escapeUrl($block->getViewFileUrl('images/loader-1.gif')); ?>"
-             alt="<?= $block->escapeHtml(__('Loading...')); ?>">
+             alt="<?= $block->escapeHtml(__('Loading...')); ?>"
+             style="position: absolute;">
     </div>
 </div>
-<?= /* @noEscape */ $secureRenderer->renderStyleAsTag('position: absolute;', 'div#checkout-loader .loader img') ?>
-<?php $checkoutConfig = /* @noEscape */ $block->getCheckoutData()->getSerializedCheckoutConfigs();
-$scriptString = <<<script
-    window.checkoutConfig = {$checkoutConfig};
+<script>
+    window.checkoutConfig = <?= /* @noEscape */ $block->getCheckoutData()->getSerializedCheckoutConfigs(); ?>;
     window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
     window.customerData = window.checkoutConfig.customerData;
-script;
-?>
-<?= /* @noEscape */ $secureRenderer->renderTag('script', [], $scriptString, false) ?>
+</script>
 <div id="checkout" data-bind="scope:'checkoutMessages'">
     <!-- ko template: getTemplate() --><!-- /ko -->
     <script type="text/x-magento-init">
@@ -76,7 +72,7 @@ script;
                             $methodsCount = count($methods);
                             $methodsForms = $block->hasFormTemplates() ? $block->getFormTemplates(): [];
 
-                            foreach ($methods as $_method):
+                            foreach ($methods as $_method) :
                                     $code = $_method->getCode();
                                     $checked = $block->getSelectedMethodCode() === $code;
 
@@ -84,44 +80,35 @@ script;
                                     $block->setMethodFormTemplate($code, $methodsForms[$code]);
                                 }
                                 ?>
-                                <div data-bind="scope: 'payment_method_<?= $block->escapeHtml($code);?>'">
-                                    <dt class="item-title">
-                                        <?php if ($methodsCount > 1): ?>
-                                            <input type="radio"
-                                                   id="p_method_<?= $block->escapeHtml($code); ?>"
-                                                   value="<?= $block->escapeHtml($code); ?>"
-                                                   name="payment[method]"
-                                                   title="<?= $block->escapeHtml($_method->getTitle()) ?>"
-                                                   data-bind="
-                                                       value: getCode(),
-                                                       checked: isChecked,
-                                                       click: selectPaymentMethod,
-                                                       visible: isRadioButtonVisible()"
-                                                <?php if ($checked): ?>
-                                                    checked="checked"
-                                                <?php endif; ?>
-                                                   class="radio"/>
-                                        <?php else: ?>
-                                            <input type="radio"
-                                                   id="p_method_<?= $block->escapeHtml($code); ?>"
-                                                   value="<?= $block->escapeHtml($code); ?>"
-                                                   name="payment[method]"
-                                                   data-bind="
-                                                       value: getCode(),
-                                                       afterRender: selectPaymentMethod"
-                                                   checked="checked"
-                                                   class="radio solo method" />
+                            <dt class="item-title">
+                                <?php if ($methodsCount > 1) : ?>
+                                    <input type="radio"
+                                           id="p_method_<?= $block->escapeHtml($code); ?>"
+                                           value="<?= $block->escapeHtml($code); ?>"
+                                           name="payment[method]"
+                                           title="<?= $block->escapeHtml($_method->getTitle()) ?>"
+                                        <?php if ($checked) : ?>
+                                           checked="checked"
                                         <?php endif; ?>
-                                        <label for="p_method_<?= $block->escapeHtml($code); ?>">
-                                            <?= $block->escapeHtml($_method->getTitle()) ?>
-                                        </label>
-                                    </dt>
-                                    <?php if ($html = $block->getChildHtml('payment.method.' . $code)): ?>
-                                        <dd class="item-content <?= $checked ? '' : 'no-display'; ?>">
-                                            <?= /* @noEscape */ $html; ?>
-                                        </dd>
-                                    <?php endif; ?>
-                                </div>
+                                           class="radio"/>
+                                <?php else : ?>
+                                    <input type="radio"
+                                           id="p_method_<?= $block->escapeHtml($code); ?>"
+                                           value="<?= $block->escapeHtml($code); ?>"
+                                           name="payment[method]"
+                                           checked="checked"
+                                           class="radio solo method" />
+                                <?php endif; ?>
+                                    <label for="p_method_<?= $block->escapeHtml($code); ?>">
+                                        <?= $block->escapeHtml($_method->getTitle()) ?>
+                                    </label>
+                            </dt>
+                                <?php if ($html = $block->getChildHtml('payment.method.' . $code)) : ?>
+                                    <dd class="item-content <?= $checked ? '' : 'no-display'; ?>"
+                                        data-bind="scope: 'payment_method_<?= $block->escapeHtml($code);?>'">
+                                        <?= /* @noEscape */ $html; ?>
+                                    </dd>
+                                <?php endif; ?>
                             <?php endforeach; ?>
                         </dl>
                         <?= $block->getChildHtml('payment_methods_after') ?>
@@ -132,7 +119,7 @@ script;
         </div>
     </div>
     <div class="actions-toolbar">
-        <div class="primary" id="parent-payment-continue">
+        <div class="primary">
             <button id="payment-continue"
                     type="button"
                     class="action primary continue">
@@ -146,14 +133,12 @@ script;
         </div>
     </div>
 </form>
-<?php $quoteBaseGrandTotal = (float)$block->getQuoteBaseGrandTotal();
-$scriptString = <<<script
-
+<script>
     require(['jquery', 'mage/mage'], function(jQuery) {
         var addtocartForm = jQuery('#multishipping-billing-form');
 
         addtocartForm.mage('payment', {
-            checkoutPrice: {$quoteBaseGrandTotal}
+            checkoutPrice: <?= (float)$block->getQuoteBaseGrandTotal() ?>
         });
 
         addtocartForm.mage('validation', {
@@ -166,42 +151,4 @@ $scriptString = <<<script
             }
         });
     });
-
-script;
-?>
-<?= /* @noEscape */ $secureRenderer->renderTag('script', [], $scriptString, false) ?>
-
-<?php $scriptString = <<<script
-
-    //<![CDATA[
-    require(
-        [
-            'Magento_Checkout/js/model/quote',
-            'jquery',
-            'domReady!'
-        ], function(quote, $) {
-            quote.billingAddress({
-
-script;
-$scriptString .= "city: '" . /* @noEscape */ $block->getAddress()->getCity() . "'," . PHP_EOL;
-$scriptString .= "company: '" . /* @noEscape */ $block->getAddress()->getCompany() . "'," . PHP_EOL;
-$scriptString .= "countryId: '" . /* @noEscape */ $block->getAddress()->getCountryId() . "'," . PHP_EOL;
-$scriptString .= "customerAddressId: '" . /* @noEscape */ $block->getAddress()->getCustomerAddressId() . "'," . PHP_EOL;
-$scriptString .= "customerId: '" . /* @noEscape */ $block->getAddress()->getCustomerId() . "'," . PHP_EOL;
-$scriptString .= "fax: '" . /* @noEscape */ $block->getAddress()->getFax() . "'," . PHP_EOL;
-$scriptString .= "firstname: '" . /* @noEscape */ $block->getAddress()->getFirstname() . "'," . PHP_EOL;
-$scriptString .= "lastname: '" . /* @noEscape */ $block->getAddress()->getLastname() . "'," . PHP_EOL;
-$scriptString .= "postcode: '" . /* @noEscape */ $block->getAddress()->getPostcode() . "'," . PHP_EOL;
-$scriptString .= "regionId: '" . /* @noEscape */ $block->getAddress()->getRegionId() . "'," . PHP_EOL;
-$scriptString .= "regionCode: '" . /* @noEscape */ $block->getAddress()->getRegionCode() . "'," . PHP_EOL;
-$scriptString .= "region: '" . /* @noEscape */ $block->getAddress()->getRegion() . "'," . PHP_EOL;
-$scriptString .= "street: " . /* @noEscape */ json_encode($block->getAddress()->getStreet()) . "," . PHP_EOL;
-$scriptString .= "telephone: '" . /* @noEscape */ $block->getAddress()->getTelephone() . "'" . PHP_EOL;
-$scriptString .= <<<script
-            });
-        });
-    //]]>
-
-script;
-?>
-<?= /* @noEscape */ $secureRenderer->renderTag('script', [], $scriptString, false) ?>
+</script>
