--- a/view/frontend/templates/checkout/overview.phtml
+++ b/view/frontend/templates/checkout/overview.phtml
@@ -5,17 +5,9 @@
  */
 
 /** @var \Magento\Multishipping\Block\Checkout\Overview $block */
-/** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
-?>
-
-<?php
-/** @var \Magento\Tax\Helper\Data $taxHelper */
-$taxHelper = $block->getData('taxHelper');
-/** @var \Magento\Checkout\Helper\Data $checkoutHelper */
-$checkoutHelper = $block->getData('checkoutHelper');
 ?>
 <?php $errors = $block->getCheckoutData()->getAddressErrors(); ?>
-<?php foreach ($errors as $addressId => $error): ?>
+<?php foreach ($errors as $addressId => $error) : ?>
     <div class="message message-error error">
         <?= $block->escapeHtml($error); ?>
         <?= $block->escapeHtml(__('Please see')); ?>
@@ -65,8 +57,8 @@ $checkoutHelper = $block->getData('checkoutHelper');
     </div>
     <div class="block block-shipping">
         <div class="block-title"><strong><?= $block->escapeHtml(__('Shipping Information')); ?></strong></div>
-        <?php $mergedCells = ($taxHelper->displayCartBothPrices() ? 2 : 1); ?>
-        <?php foreach ($block->getShippingAddresses() as $index => $address): ?>
+        <?php $mergedCells = ($this->helper(Magento\Tax\Helper\Data::class)->displayCartBothPrices() ? 2 : 1); ?>
+        <?php foreach ($block->getShippingAddresses() as $index => $address) : ?>
             <div class="block-content">
                 <a name="<?= $block->escapeHtml($block->getCheckoutData()
                     ->getAddressAnchorName($address->getId())); ?>"></a>
@@ -78,7 +70,7 @@ $checkoutHelper = $block->getData('checkoutHelper');
                         </span>
                     </strong>
                 </div>
-                <?php if ($error = $block->getCheckoutData()->getAddressError($address)): ?>
+                <?php if ($error = $block->getCheckoutData()->getAddressError($address)) : ?>
                     <div class="error-description"><?= $block->escapeHtml($error); ?></div>
                 <?php endif;?>
                 <div class="box box-shipping-address">
@@ -99,16 +91,17 @@ $checkoutHelper = $block->getData('checkoutHelper');
                         <a href="<?= $block->escapeUrl($block->getEditShippingUrl()); ?>"
                            class="action edit"><span><?= $block->escapeHtml(__('Change')); ?></span></a>
                     </strong>
-                    <?php if ($_rate = $block->getShippingAddressRate($address)): ?>
+                    <?php if ($_rate = $block->getShippingAddressRate($address)) : ?>
                         <div class="box-content">
                             <?= $block->escapeHtml($_rate->getCarrierTitle()) ?>
                             (<?= $block->escapeHtml($_rate->getMethodTitle()) ?>)
                             <?php
                             $exclTax = $block->getShippingPriceExclTax($address);
                             $inclTax = $block->getShippingPriceInclTax($address);
-                            $displayBothPrices = $taxHelper->displayShippingBothPrices() && $inclTax !== $exclTax;
+                            $displayBothPrices = $this->helper(Magento\Tax\Helper\Data::class)
+                                ->displayShippingBothPrices() && $inclTax !== $exclTax;
                             ?>
-                            <?php if ($displayBothPrices): ?>
+                            <?php if ($displayBothPrices) : ?>
                                 <span class="price-including-tax"
                                       data-label="<?= $block->escapeHtml(__('Incl. Tax')); ?>">
                                     <?= /* @noEscape */ $inclTax ?>
@@ -117,7 +110,7 @@ $checkoutHelper = $block->getData('checkoutHelper');
                                       data-label="<?= $block->escapeHtml(__('Excl. Tax')); ?>">
                                     <?= /* @noEscape */ $exclTax; ?>
                                 </span>
-                            <?php else: ?>
+                            <?php else : ?>
                                 <?= /* @noEscape */ $inclTax ?>
                             <?php  endif; ?>
                         </div>
@@ -143,7 +136,7 @@ $checkoutHelper = $block->getData('checkoutHelper');
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <?php foreach ($block->getShippingAddressItems($address) as $item): ?>
+                                <?php foreach ($block->getShippingAddressItems($address) as $item) : ?>
                                     <?= /* @noEscape */ $block->getRowItemHtml($item) ?>
                                 <?php endforeach; ?>
                                 </tbody>
@@ -160,13 +153,13 @@ $checkoutHelper = $block->getData('checkoutHelper');
         <?php endforeach; ?>
     </div>
 
-    <?php if ($block->getQuote()->hasVirtualItems()): ?>
+    <?php if ($block->getQuote()->hasVirtualItems()) : ?>
     <div class="block block-other">
         <?php $billingAddress = $block->getQuote()->getBillingAddress(); ?>
         <a name="<?= $block->escapeHtml($block->getCheckoutData()
             ->getAddressAnchorName($billingAddress->getId())); ?>"></a>
         <div class="block-title"><strong><?= $block->escapeHtml(__('Other items in your order')); ?></strong></div>
-        <?php if ($error = $block->getCheckoutData()->getAddressError($billingAddress)): ?>
+        <?php if ($error = $block->getCheckoutData()->getAddressError($billingAddress)) :?>
                 <div class="error-description"><?= $block->escapeHtml($error); ?></div>
         <?php endif;?>
         <div class="block-content">
@@ -175,7 +168,7 @@ $checkoutHelper = $block->getData('checkoutHelper');
                 <a href="<?= $block->escapeUrl($block->getVirtualProductEditUrl()); ?>"
                    class="action edit"><span><?= $block->escapeHtml(__('Edit Items')); ?></span></a>
             </strong>
-            <?php $mergedCells = ($taxHelper->displayCartBothPrices() ? 2 : 1); ?>
+            <?php $mergedCells = ($this->helper(Magento\Tax\Helper\Data::class)->displayCartBothPrices() ? 2 : 1); ?>
             <div class="order-review-wrapper table-wrapper">
                 <table class="items data table table-order-review" id="virtual-overview-table">
                     <caption class="table-caption"><?= $block->escapeHtml(__('Items')); ?></caption>
@@ -188,7 +181,7 @@ $checkoutHelper = $block->getData('checkoutHelper');
                         </tr>
                     </thead>
                     <tbody>
-                        <?php foreach ($block->getVirtualItems() as $_item): ?>
+                        <?php foreach ($block->getVirtualItems() as $_item) : ?>
                             <?= /* @noEscape */ $block->getRowItemHtml($_item) ?>
                         <?php endforeach; ?>
                     </tbody>
@@ -208,7 +201,8 @@ $checkoutHelper = $block->getData('checkoutHelper');
         <div class="grand totals">
             <strong class="mark"><?= $block->escapeHtml(__('Grand Total:')); ?></strong>
             <strong class="amount">
-                <?= /* @noEscape */ $checkoutHelper->formatPrice($block->getTotal()); ?>
+                <?= /* @noEscape */ $this->helper(Magento\Checkout\Helper\Data::class)
+                    ->formatPrice($block->getTotal()); ?>
             </strong>
         </div>
         <div class="actions-toolbar" id="review-buttons-container">
@@ -225,10 +219,10 @@ $checkoutHelper = $block->getData('checkoutHelper');
             </div>
             <span id="review-please-wait"
                   class="please-wait load indicator"
+                  style="display: none;"
                   data-text="<?= $block->escapeHtml(__('Submitting order information...')); ?>">
                 <span><?= $block->escapeHtml(__('Submitting order information...')); ?></span>
             </span>
-            <?= /* @noEscape */ $secureRenderer->renderStyleAsTag('display: none;', 'span#review-please-wait') ?>
         </div>
     </div>
 </form>
