--- a/view/frontend/templates/checkout/state.phtml
+++ b/view/frontend/templates/checkout/state.phtml
@@ -4,7 +4,7 @@
  * See COPYING.txt for license details.
  */
 
-// phpcs:disable Magento2.Files.LineLength
+// @codingStandardsIgnoreFile
 
 ?>
 <?php
@@ -15,9 +15,7 @@
  */
 ?>
 <ol class="block multicheckout progress items" id="checkout-progress-state">
-    <?php foreach ($block->getSteps() as $_step) : ?>
-        <li title="<?= $block->escapeHtmlAttr($_step->getLabel()) ?>" class="item<?= ($_step->getIsActive()) ? ' active' : '' ?>">
-            <span><?= $block->escapeHtml($_step->getLabel()) ?></span>
-        </li>
+    <?php foreach ($block->getSteps() as $_step): ?>
+        <li title="<?= /* @escapeNotVerified */ $_step->getLabel() ?>" class="item<?= ($_step->getIsActive()) ? ' active' : '' ?>"><span><?= /* @escapeNotVerified */ $_step->getLabel() ?></span></li>
     <?php endforeach; ?>
 </ol>
